# rc-insights

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  alerts.example.yml  app.py  pyproject.toml
.github/workflows/: health-check.yml  publish.yml
docs/: index.html
rc_insights/: __init__.py  alerts.py  analyzer.py  cli.py  client.py  cohort.py  emails.py  models.py  notifications.py  report.py  webhooks.py
submission/: SUBMISSION.md  content-package.md  growth-campaign.md  process-log.md  video-script.md
tests/: __init__.py  conftest.py  test_alerts.py  test_analyzer.py  test_cli.py  test_client.py  test_cohort.py  test_emails.py  test_models.py  test_notifications.py  test_report.py  test_webhooks.py
